Name:           Steganography
Version:        0.0.8
Author:         Marcus Ofenhed <marcus@conditionraise.se>
Maintainer:     Marcus Ofenhed <marcus@conditionraise.se>
License:        GPLv2
License-File:   LICENSE
Synopsis:       Steganography program.
Description:    This program is designed to hide information in images without
                possibility of detection. The information is encryted and
                hidden at random locations in the image.
Category:       Cryptography
Build-Type:     Simple
cabal-version:  >= 1.10

Executable Steganography-commandline
  Main-Is:           CommandLineMain.hs
  Default-Language:  Haskell2010
  Build-Depends:     base>= 4 && <5,
                     bytestring,
                     primitive,
                     cryptonite,
                     binary,
                     JuicyPixels,
                     transformers,
                     mtl,
                     vector,
                     Lazy-Pbkdf2,
                     array,
                     bitstring,
                     parallel,
                     console-program,
                     memory,
                     x509,
                     x509-store,
                     pem,
                     asn1-encoding,
                     asn1-types

Source-Repository head
  Type:       git
  Location:   https://github.com/Ofenhed/Steganography
