Name:           Steganography
Version:        0.1.2
Author:         Marcus Ofenhed <marcus@conditionraise.se>
Maintainer:     Marcus Ofenhed <marcus@conditionraise.se>
License:        GPLv2
License-File:   LICENSE
Synopsis:       Steganography program.
Description:    This program is designed to hide information in images without
                possibility of detection. The information is encryted and
                hidden at random locations in the image.
Category:       Cryptography
Build-Type:     Simple
cabal-version:  >= 1.10

Executable Steganography-commandline
  Main-Is:           CommandLineMain.hs
  Default-Language:  Haskell2010
  Build-Depends:     base>= 4 && <5,
                     array,
                     asn1-encoding,
                     asn1-types,
                     base64-bytestring,
                     binary,
                     bitstring,
                     bytestring,
                     console-program,
                     cryptonite,
                     JuicyPixels,
                     Lazy-Pbkdf2,
                     memory,
                     mtl,
                     parallel,
                     pem,
                     primitive,
                     transformers,
                     vector,
                     x509,
                     x509-store

Source-Repository head
  Type:       git
  Location:   https://github.com/Ofenhed/Steganography
