Name:                Steganography
Version:             2.1.1
Author:              Marcus Ofenhed <marcus@conditionraise.se>
Maintainer:          Marcus Ofenhed <marcus@conditionraise.se>
License:             GPL-2
License-File:        LICENSE
Synopsis:            Steganography program.
Description:         This program is designed to hide information in images without
                     possibility of detection. The information is encryted and
                     hidden at random locations in the image.
Category:            Cryptography
cabal-version:       >= 1.10
Build-Type:          Simple


Executable Steganography-commandline
  Main-Is:           CommandLineMain.hs
  Default-Language:  Haskell2010
  hs-source-dirs:    src
  Build-Depends:     base>= 4 && <5,
                     array,
                     asn1-encoding,
                     asn1-types,
                     base64-bytestring,
                     binary,
                     bitstring,
                     BitStringRandomMonad >= 1.0.0.0,
                     bytestring,
                     console-program,
                     cryptonite,
                     deepseq >= 1.2.0.0,
                     JuicyPixels,
                     Lazy-Pbkdf2 >= 2.1.0,
                     memory,
                     pem,
                     time,
                     transformers,
                     x509,
                     x509-store

Source-Repository head
  Type:       git
  Location:   https://github.com/Ofenhed/Steganography
